--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-img{
-    display:block;
-    margin:auto;
-}
 body{
     padding:0px;
     margin:0px;
@@ -17,4 +13,10 @@ h2{
 }
 .slider{
     width:420px;
+}
+#images{
+    display: inline
+}
+.options{
+    float:right;
 }
